--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "pg": "^8.11.3",
     "socket.io": "^4.7.5",
     "tape": "^5.7.2"
-  }
+  },
+  "scripts": {
+    "test": "tape 'tests/test.js'"
+  }  
 }
